# whyenf

./: .gitattributes  .gitignore  .merlin  Makefile  README.md  dune  dune-project  dune-workspace  enfguard  explanator2.opam  issues.txt  lifeboat  whyenf  whymon.opam
MFOTL/: MFOTL.ml  MFOTL.mli  aggregation.ml  aggregation.mli  ctxt.ml  ctxt.mli  dom.ml  dom.mli  dune  enftype.ml  enftype.mli  etc.ml  etc.mli  filter.ml  filter.mli  interval.ml  interval.mli  lattice.ml  modules.ml  modules.mli  multiset.mli  side.ml  term.ml  term.mli  time.ml  time.mli  valuation.ml  valuation.mli  zinterval.ml  zinterval.mli
docs/cheatsheet/: cheatsheet.tex
etc/: escape_log.py  generate_weights.py  translate_rocket_launch.py  translate_timescales.py
eval/enforcement/: README.html  README.md  evaluate_agg.py  evaluate_cluster.py  evaluate_fun.py  evaluate_gdpr.py  evaluate_ic.py  evaluate_nokia.py  evaluate_rq2.py  evaluate_rq2_ic.py  evaluate_rq3.py  evaluation.py  examples  examples_ic  generator.py  preprocess.py  replayer.py  stats.py
examples/: data_race.sig  ex.mfotl  ex.sig  ex0.mdl  ex0.mtl  ex1.mtl  publish_approve.mfotl  test0.mtl  test1.mfotl  test2.mtl  test3.mtl  test4.mdl  test5.mtl
js/: dune  explanator2.ml  whymon.ml
lib/: checker.ml  checker_interface.ml  dune  expl.ml  expl.mli  interval.mli  io.ml  io.mli  monitor.ml  monitor.mli  mtl.ml  mtl.mli  mtl_lexer.mll  mtl_parser.mly  util.ml  vis.ml  vis.mli  visualization.ml  visualization.mli
other/: ABSTRACT.md  Dockerfile  README.md
src/: MFOTL.ml  MFOTL.mli  MFOTL_Base.mli  MFOTL_Ctxt.ml  MFOTL_Ctxt.mli  MFOTL_Term.ml  MFOTL_Term.mli  aggregation.ml  aggregation.mli  channel.ml  channel.mli  check.ml  check.mli  check_interface.ml  check_interface.mli  checker.ml  checker_interface.ml  checker_interface.mli  ctxt.ml  ctxt.mli  db.ml  db.mli  dom.ml  dom.mli  domain.mli  dune  enforcer.ml  enforcer.mli  enftype.ml  enftype.mli  errors.ml  errors.mli  etc.ml  etc.mli  expl.ml  expl.mli  fobligation.ml  fobligation.mli  formula.ml  formula.mli  (+70 more)
src/mfotl/: checker.ml  checker_interface.ml  checker_interface.mli  coset.ml  coset.mli  db.ml  db.mli  db_lexer.mll  db_parser.mly  domain.ml  domain.mli  dune  etc.ml  etc.mli  expl.ml  expl.mli  fdeque.ml  fdeque.mli  formula.ml  formula.mli  formula_lexer.mll  formula_parser.mly  import.ml  import.mli  interval.ml  interval.mli  io.ml  monitor.ml  monitor.mli  other_lexer.mll  other_parser.ml  other_parser.mli  out.ml  out.mli  pred.ml  pred.mli  setc.ml  setc.mli  sig_lexer.mll  sig_parser.ml  (+5 more)
src/mtl/: checker_interface.ml  checker_interface.mli  dune  expl.ml  formula.ml  formula.mli  io.ml  io.mli  lexer.mll  monitor.ml  monitor.mli  parser.mly  vis.ml  vis.mli
src/util/: interval.ml  interval.mli  misc.ml  misc.mli
test/: .dune  clean.sh  clear.sh  dune  run_tests.sh  test_seed.sh  test_seed_past.sh  test_weights.ws
tests/: .gitignore  config.json  summary.csv  test.py
tools/: convert_dejavu.py  convert_one_line.py  cut_log.py
vis/: package-lock.json  package.json
visualization/: package-lock.json  package.json
(+500 files in other folders)
