(ocamllex
 (modules other_lexer formula_lexer))

(menhir
 (modules formula_parser))
 ;; debug (flags --explain --inspection --table --dump))

(library
 (name monitor_lib)
 (libraries core_kernel base zarith landmarks)
 (preprocess (pps ppx_jane landmarks-ppx --auto))
 (instrumentation (backend landmarks))
)
